@@ -53,7 +53,8 @@ class ViewsourceRight extends ExtensionClass
 			'name'    => self::thisName, 
 			'version'     => self::getRevisionId( self::id ),
 			'author'  => 'Jean-Lou Dupont', 
-			'description' => "Status: "
+			'description' => "Status: ",
+			'url' => self::getFullUrl(__FILE__),			
 		);
 	}
 	
